--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         <div class="footer-logo container">
             <a href="index.html" class="logo-link"><span class="logo">Web</span><span class="studio-down">Studio</span></a></div>
         <div class="footer-address container">
-            <address ><span class="actual-address">г. Киев, пр-т Леси Украинки, 26 </span>
-            <a  href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
+            <address ><span class="actual-address list">г. Киев, пр-т Леси Украинки, 26 </span>
+            <a  href="mailto:info@devstudio.com" class="footer-contacts list">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="footer-contacts list">+38 096 111 11 11</a>
         </address></div>
 
     </footer>
