--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,7 @@
     </header>
 
     <main>
+        <section class="portfolio">
         <div class="container">
 
             <h1 class="hidden">Портфолио</h1>
@@ -124,6 +125,7 @@
             </ul>
 
         </div>
+        </section>
     </main>
     <footer class="main-foter">
         <div class="container">
